トップページ変更とminifyファイルへの対応

--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 <head>
-	<meta charset="UTF-8">
-	<title>sample</title>
+    <meta charset="UTF-8">
+    <title>Example</title>
 </head>
 <body>
-	sample
+    <div class="twitprof" data-screen="kijtra"></div>
+    <script src="//kijtra-twitprof.appspot.com/v1.min.js"></script>
 </body>
 </html>
