--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>TwitProf</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://google-code-prettify.googlecode.com/svn/loader/skins/sunburst.css" rel="stylesheet">
@@ -13,6 +15,8 @@
         padding:15px;
         border:0;
         border-radius:3px;
+        overflow:auto;
+        -webkit-overflow-scrolling:touch;
     }
 
     body pre.prettyprint b, body pre.prettyprint b * {
