--- a/static/index.html
+++ b/static/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="ja">
 <head>
@@ -13,6 +14,7 @@
         width:auto;
         margin:0;
         padding:15px;
+        font-family: Consolas, Courier, sans-serif;
         border:0;
         border-radius:3px;
         overflow:auto;
@@ -33,18 +35,19 @@
                 <pre class="prettyprint lang-html">&lt;div class="twitprof" data-screen="kijtra"&gt;&lt;/div&gt;
 &lt;script src="//kijtra-twitprof.appspot.com/v1.min.js"&gt;&lt;/script&gt;</pre>
                 <p class="text-center text-muted"><br><i class="fa fa-chevron-down fa-5x"></i><br><br></p>
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                     <div class="twitprof" data-screen="kijtra"></div>
                 </div>
             </div>
 
+            <hr class="hidden-md hidden-lg">
 
             <div class="col-md-6">
                 <h3>ダークテーマ</h3>
                 <pre class="prettyprint lang-html">&lt;div class="twitprof <b>dark</b>" data-screen="kijtra"&gt;&lt;/div&gt;
 &lt;script src="//kijtra-twitprof.appspot.com/v1.min.js"&gt;&lt;/script&gt;</pre>
                 <p class="text-center text-muted"><br><i class="fa fa-chevron-down fa-5x"></i><br><br></p>
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                     <div class="twitprof dark" data-screen="kijtra"></div>
                 </div>
             </div>
@@ -58,18 +61,19 @@
                 <pre class="prettyprint lang-html">&lt;div class="twitprof <b>naked</b>" data-screen="kijtra"&gt;&lt;/div&gt;
 &lt;script src="//kijtra-twitprof.appspot.com/v1.min.js"&gt;&lt;/script&gt;</pre>
                 <p class="text-center text-muted"><br><i class="fa fa-chevron-down fa-5x"></i><br><br></p>
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                     <div class="twitprof naked" data-screen="kijtra"></div>
                 </div>
             </div>
 
+            <hr class="hidden-md hidden-lg">
 
             <div class="col-md-6">
                 <h3>ちいさめ</h3>
                 <pre class="prettyprint lang-html">&lt;div class="twitprof <b>mini</b>" data-screen="kijtra"&gt;&lt;/div&gt;
 &lt;script src="//kijtra-twitprof.appspot.com/v1.min.js"&gt;&lt;/script&gt;</pre>
                 <p class="text-center text-muted"><br><i class="fa fa-chevron-down fa-5x"></i><br><br></p>
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                     <div class="twitprof mini" data-screen="kijtra"></div>
                 </div>
             </div>
