index.html fixed

--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,8 @@
         -webkit-overflow-scrolling:touch;
     }
 
-    body pre.prettyprint b, body pre.prettyprint b * {
+    body pre.prettyprint b,
+    body pre.prettyprint b * {
         color:#E04A3F !important;
     }
     </style>
